# repartizare_c8

./: Cargo.toml  Dockerfile
migrations/: 00_counties.sql  01_specializare.sql  02_elev.sql
src/: county.rs  db.rs  dbmgr.rs  lib.rs  main.rs  server.rs  specializare.rs  student.rs  year_gen.rs
