[package]
name = "repartizare_c8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13.0"
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
regex = "1"
futures = "0.3"
clap = { version = "3.2.17", features = ["derive"] }
titlecase = "2.0.0"
